--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <h1>Học thẻ code</h1>
+    <h2>Sửa đổi lần 1</h2>
     <p>
       Em đang học thẻ <code>&lt;em&gt;&lt;/em&gt;</code> va the
-      <code>&lt;strong&gt;&lt;/strong&gt;</code>
+      <code> &lt;strong&gt;&lt;/strong&gt;</code>
     </p>
     <pre><code>&lt;head&gt;
     &lt;meta charset=&quot;UTF-8&quot;&gt;
